Compiler/ANTLR/TigerGrammarParser.cs
// $ANTLR 3.3 Nov 30, 2010 12:45:30 C:\\Users\\Victor Manuel\\Desktop\\Projects\\GRAMMARS\\TigerGrammar.g 2012-03-08 10:43:44

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162


using System.Collections.Generic;
using Antlr.Runtime;
using Stack = System.Collections.Generic.Stack<object>;
using List = System.Collections.IList;
using ArrayList = System.Collections.Generic.List<object>;
using Map = System.Collections.IDictionary;
using HashMap = System.Collections.Generic.Dictionary<object, object>;

using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.3 Nov 30, 2010 12:45:30")]
[System.CLSCompliant(false)]
public partial class TigerGrammarParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ARRAY", "IF", "THEN", "ELSE", "WHILE", "FOR", "TO", "DO", "LET", "IN", "END", "OF", "BREAK", "NIL", "FUNCTION", "VAR", "TYPE", "DOT", "COMMA", "COLON", "SEMICOLON", "L_PARENT", "R_PARENT", "L_BRACKET", "R_BRACKET", "L_BRACE", "R_BRACE", "PLUS", "MINUS", "MULT", "DIV", "EQUALS", "NOT_EQUALS", "LESS", "LESS_EQUALS", "GREATER", "GREATER_EQUALS", "AND", "OR", "ASSIGN", "OPEN_COMMENT", "CLOSE_COMMENT", "TYPED_VAR_DECLARATION", "INFERRED_VAR_DECLARATION", "RECORD_DECLARATION", "ALIAS_DECLARATION", "ARRAY_DECLARATION", "ARRAY_CREATION", "RECORD_CREATION", "FUNCTION_DECLARATION", "PROCEDURE_DECLARATION", "CALLABLE_CALL", "MINUS_UNARY", "RECORD_ACCESS", "ARRAY_ACCESS", "LVALUE_ID", "IF_THEN", "IF_THEN_ELSE", "DECLARATION_LIST", "EXPR_SEQ", "INT", "STRING", "ID", "LETTER", "DEC_DIGIT", "COMMENT", "WS", "ESC_SEQ", "HEX_DIGIT", "ASCII_ESC"
	};
	public const int EOF=-1;
	public const int ARRAY=4;
	public const int IF=5;
	public const int THEN=6;
	public const int ELSE=7;
	public const int WHILE=8;
	public const int FOR=9;
	public const int TO=10;
	public const int DO=11;
	public const int LET=12;
	public const int IN=13;
	public const int END=14;
	public const int OF=15;
	public const int BREAK=16;
	public const int NIL=17;
	public const int FUNCTION=18;
	public const int VAR=19;
	public const int TYPE=20;
	public const int DOT=21;
	public const int COMMA=22;
	public const int COLON=23;
	public const int SEMICOLON=24;
	public const int L_PARENT=25;
	public const int R_PARENT=26;
	public const int L_BRACKET=27;
	public const int R_BRACKET=28;
	public const int L_BRACE=29;
	public const int R_BRACE=30;
	public const int PLUS=31;
	public const int MINUS=32;
	public const int MULT=33;
	public const int DIV=34;
	public const int EQUALS=35;
	public const int NOT_EQUALS=36;
	public const int LESS=37;
	public const int LESS_EQUALS=38;
	public const int GREATER=39;
	public const int GREATER_EQUALS=40;
	public const int AND=41;
	public const int OR=42;
	public const int ASSIGN=43;
	public const int OPEN_COMMENT=44;
	public const int CLOSE_COMMENT=45;
	public const int TYPED_VAR_DECLARATION=46;
	public const int INFERRED_VAR_DECLARATION=47;
	public const int RECORD_DECLARATION=48;
	public const int ALIAS_DECLARATION=49;
	public const int ARRAY_DECLARATION=50;
	public const int ARRAY_CREATION=51;
	public const int RECORD_CREATION=52;
	public const int FUNCTION_DECLARATION=53;
	public const int PROCEDURE_DECLARATION=54;
	public const int CALLABLE_CALL=55;
	public const int MINUS_UNARY=56;
	public const int RECORD_ACCESS=57;
	public const int ARRAY_ACCESS=58;
	public const int LVALUE_ID=59;
	public const int IF_THEN=60;
	public const int IF_THEN_ELSE=61;
	public const int DECLARATION_LIST=62;
	public const int EXPR_SEQ=63;
	public const int INT=64;
	public const int STRING=65;
	public const int ID=66;
	public const int LETTER=67;
	public const int DEC_DIGIT=68;
	public const int COMMENT=69;
	public const int WS=70;
	public const int ESC_SEQ=71;
	public const int HEX_DIGIT=72;
	public const int ASCII_ESC=73;

	// delegates
	// delegators

	#if ANTLR_DEBUG
		private static readonly bool[] decisionCanBacktrack =
			new bool[]
			{
				false, // invalid decision
				true, false, false, false, false, false, false, false, false, false, 
				false, false, true, false, false, false, false, true, false, false, 
				false, false, false, false, false, false, false, false, false
			};
	#else
		private static readonly bool[] decisionCanBacktrack = new bool[0];
	#endif
	public TigerGrammarParser( ITokenStream input )
		: this( input, new RecognizerSharedState() )
	{
	}
	public TigerGrammarParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		this.state.ruleMemo = new System.Collections.Generic.Dictionary<int, int>[33+1];

		ITreeAdaptor treeAdaptor = null;
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();

		OnCreated();
	}
		
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}
		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return TigerGrammarParser.tokenNames; } }
	public override string GrammarFileName { get { return "C:\\Users\\Victor Manuel\\Desktop\\Projects\\GRAMMARS\\TigerGrammar.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	public class program_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_program();
	partial void Leave_program();

	// $ANTLR start "program"
	// C:\\Users\\Victor Manuel\\Desktop\\Projects\\GRAMMARS\\TigerGrammar.g:93:8: public program : expr EOF ;
	[GrammarRule("program")]
	public TigerGrammarParser.program_return program()
	{
		Enter_program();
		EnterRule("program", 1);
		TraceIn("program", 1);
		TigerGrammarParser.program_return retval = new TigerGrammarParser.program_return();
		retval.Start = (IToken)input.LT(1);

		object root_0 = null;

		IToken EOF2=null;
		TigerGrammarParser.expr_return expr1 = default(TigerGrammarParser.expr_return);

		object EOF2_tree=null;

		try { DebugEnterRule(GrammarFileName, "program");
		DebugLocation(93, 1);
		try
		{
			// C:\\Users\\Victor Manuel\\Desktop\\Projects\\GRAMMARS\\TigerGrammar.g:94:2: ( expr EOF )
			DebugEnterAlt(1);
			// C:\\Users\\Victor Manuel\\Desktop\\Projects\\GRAMMARS\\TigerGrammar.g:95:3: expr EOF
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(95, 3);
			PushFollow(Follow._expr_in_program545);
			expr1=expr();
			PopFollow();
			if (state.failed) return retval;
			if ( state.backtracking == 0 ) adaptor.AddChild(root_0, expr1.Tree);
			DebugLocation(95, 11);
			EOF2=(IToken)Match(input,EOF,Follow._EOF_in_program547); if (state.failed) return retval;

			}

			retval.Stop = (IToken)input.LT(-1);

			if ( state.backtracking == 0 ) {

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("program", 1);
			LeaveRule("program", 1);
			Leave_program();
		}
		DebugLocation(96, 1);
		} finally { DebugExitRule(GrammarFileName, "program"); }
		return retval;

	}
	// $ANTLR end "program"

	public class expr_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_expr();
	partial void Leave_expr();

	// $ANTLR start "expr"
	// C:\\Users\\Victor Manuel\\Desktop\\Projects\\GRAMMARS\\TigerGrammar.g:98:1: expr options {backtrack=true; memoize=true; } : ( array_creation | assign_expr | expr_or | control_instr | let_in_end );
	[GrammarRule("expr")]
	private TigerGrammarParser.expr_return expr()
	{
		Enter_expr();
		EnterRule("expr", 2);
		TraceIn("expr", 2);
		TigerGrammarParser.expr_return retval = new TigerGrammarParser.expr_return();
		retval.Start = (IToken)input.LT(1);
		int expr_StartIndex = input.Index;
		object root_0 = null;

		TigerGrammarParser.array_creation_return array_creation3 = default(TigerGrammarParser.array_creation_return);
		TigerGrammarParser.assign_expr_return assign_expr4 = default(TigerGrammarParser.assign_expr_return);
		TigerGrammarParser.expr_or_return expr_or5 = default(TigerGrammarParser.expr_or_return);
		TigerGrammarParser.control_instr_return control_instr6 = default(TigerGrammarParser.control_instr_return);
		TigerGrammarParser.let_in_end_return let_in_end7 = default(TigerGrammarParser.let_in_end_return);


		try { DebugEnterRule(GrammarFileName, "expr");
		DebugLocation(98, 1);
		try
		{
			if (state.backtracking > 0 && AlreadyParsedRule(input, 2)) { return retval; }
			// C:\\Users\\Victor Manuel\\Desktop\\Projects\\GRAMMARS\\TigerGrammar.g:99:2: ( array_creation | assign_expr | expr_or | control_instr | let_in_end )
			int alt1=5;
			try { DebugEnterDecision(1, decisionCanBacktrack[1]);
			try
			{
				alt1 = dfa1.Predict(input);
			}
			catch (NoViableAltException nvae)
			{
				DebugRecognitionException(nvae);
				throw;
			}
			} finally { DebugExitDecision(1); }
			switch (alt1)
			{
			case 1:
				DebugEnterAlt(1);
				// C:\\Users\\Victor Manuel\\Desktop\\Projects\\GRAMMARS\\TigerGrammar.g:99:4: array_creation
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(99, 4);
				PushFollow(Follow._array_creation_in_expr577);
				array_creation3=array_creation();
				PopFollow();
				if (state.failed) return retval;
				if ( state.backtracking == 0 ) adaptor.AddChild(root_0, array_creation3.Tree);

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// C:\\Users\\Victor Manuel\\Desktop\\Projects\\GRAMMARS\\TigerGrammar.g:100:10: assign_expr
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(100, 10);
				PushFollow(Follow._assign_expr_in_expr588);
				assign_expr4=assign_expr();
				PopFollow();
				if (state.failed) return retval;
				if ( state.backtracking == 0 ) adaptor.AddChild(root_0, assign_expr4.Tree);

				}
				break;
			case 3:
				DebugEnterAlt(3);
				// C:\\Users\\Victor Manuel\\Desktop\\Projects\\GRAMMARS\\TigerGrammar.g:101:10: expr_or
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(101, 10);
				PushFollow(Follow._expr_or_in_expr600);
				expr_or5=expr_or();
				PopFollow();
				if (state.failed) return retval;
				if ( state.backtracking == 0 ) adaptor.AddChild(root_0, expr_or5.Tree);

				}
				break;
			case 4:
				DebugEnterAlt(4);
				// C:\\Users\\Victor Manuel\\Desktop\\Projects\\GRAMMARS\\TigerGrammar.g:102:10: control_instr
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(102, 10);
				PushFollow(Follow._control_instr_in_expr611);
				control_instr6=control_instr();
				PopFollow();
				if (state.failed) return retval;
				if ( state.backtracking == 0 ) adaptor.AddChild(root_0, control_instr6.Tree);

				}
				break;
			case 5:
				DebugEnterAlt(5);
				// C:\\Users\\Victor Manuel\\Desktop\\Projects\\GRAMMARS\\TigerGrammar.g:103:10: let_in_end
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(103, 10);
				PushFollow(Follow._let_in_end_in_expr622);
				let_in_end7=let_in_end();
				PopFollow();
				if (state.failed) return retval;
				if ( state.backtracking == 0 ) adaptor.AddChild(root_0, let_in_end7.Tree);

				}
				break;

			}
			retval.Stop = (IToken)input.LT(-1);

			if ( state.backtracking == 0 ) {

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("expr", 2);
			LeaveRule("expr", 2);
			Leave_expr();
			if (state.backtracking > 0) { Memoize(input, 2, expr_StartIndex); }
		}
		DebugLocation(104, 1);
		} finally { DebugExitRule(GrammarFileName, "expr"); }
		return retval;

	}
	// $ANTLR end "expr"

	public class expr_or_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_expr_or();
	partial void Leave_expr_or();

	// $ANTLR start "expr_or"
	// C:\\Users\\Victor Manuel\\Desktop\\Projects\\GRAMMARS\\TigerGrammar.g:106:1: expr_or : expr_and ( OR expr_and )* ;
	[GrammarRule("expr_or")]
	private TigerGrammarParser.expr_or_return expr_or()
	{
		Enter_expr_or();
		EnterRule("expr_or", 3);
		TraceIn("expr_or", 3);
		TigerGrammarParser.expr_or_return retval = new TigerGrammarParser.expr_or_return();
		retval.Start = (IToken)input.LT(1);

		object root_0 = null;

		IToken OR9=null;
		TigerGrammarParser.expr_and_return expr_and8 = default(TigerGrammarParser.expr_and_return);
		TigerGrammarParser.expr_and_return expr_and10 = default(TigerGrammarParser.expr_and_return);

		object OR9_tree=null;

		try { DebugEnterRule(GrammarFileName, "expr_or");
		DebugLocation(106, 1);
		try
		{
			// C:\\Users\\Victor Manuel\\Desktop\\Projects\\GRAMMARS\\TigerGrammar.g:107:2: ( expr_and ( OR expr_and )* )
			DebugEnterAlt(1);
			// C:\\Users\\Victor Manuel\\Desktop\\Projects\\GRAMMARS\\TigerGrammar.g:108:3: expr_and ( OR expr_and )*
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(108, 3);
			PushFollow(Follow._expr_and_in_expr_or638);
			expr_and8=expr_and();
			PopFollow();
			if (state.failed) return retval;
			if ( state.backtracking == 0 ) adaptor.AddChild(root_0, expr_and8.Tree);
			DebugLocation(108, 12);
			// C:\\Users\\Victor Manuel\\Desktop\\Projects\\GRAMMARS\\TigerGrammar.g:108:12: ( OR expr_and )*
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=2;
				try { DebugEnterDecision(2, decisionCanBacktrack[2]);
				int LA2_0 = input.LA(1);

				if ((LA2_0==OR))
				{
					alt2=1;
				}


				} finally { DebugExitDecision(2); }
				switch ( alt2 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\Victor Manuel\\Desktop\\Projects\\GRAMMARS\\TigerGrammar.g:108:13: OR expr_and
					{
					DebugLocation(108, 15);
					OR9=(IToken)Match(input,OR,Follow._OR_in_expr_or641); if (state.failed) return retval;
					if ( state.backtracking == 0 ) {
					OR9_tree = (object)adaptor.Create(OR9);
					root_0 = (object)adaptor.BecomeRoot(OR9_tree, root_0);
					}
					DebugLocation(108, 17);
					PushFollow(Follow._expr_and_in_expr_or644);
					expr_and10=expr_and();
					PopFollow();
					if (state.failed) return retval;
					if ( state.backtracking == 0 ) adaptor.AddChild(root_0, expr_and10.Tree);

					}
					break;

				default:
					goto loop2;
				}
			}

			loop2:
				;

			} finally { DebugExitSubRule(2); }


			}

			retval.Stop = (IToken)input.LT(-1);

			if ( state.backtracking == 0 ) {

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("expr_or", 3);
			LeaveRule("expr_or", 3);
			Leave_expr_or();
		}
		DebugLocation(109, 1);
		} finally { DebugExitRule(GrammarFileName, "expr_or"); }
		return retval;

	}
	// $ANTLR end "expr_or"

	public class expr_and_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_expr_and();
	partial void Leave_expr_and();

	// $ANTLR start "expr_and"
	// C:\\Users\\Victor Manuel\\Desktop\\Projects\\GRAMMARS\\TigerGrammar.g:111:1: expr_and : expr_rel ( AND expr_rel )* ;
	[GrammarRule("expr_and")]
	private TigerGrammarParser.expr_and_return expr_and()
	{
		Enter_expr_and();
		EnterRule("expr_and", 4);
		TraceIn("expr_and", 4);
		TigerGrammarParser.expr_and_return retval = new TigerGrammarParser.expr_and_return();
		retval.Start = (IToken)input.LT(1);

		object root_0 = null;

		IToken AND12=null;
		TigerGrammarParser.expr_rel_return expr_rel11 = default(TigerGrammarParser.expr_rel_return);
		TigerGrammarParser.expr_rel_return expr_rel13 = default(TigerGrammarParser.expr_rel_return);

		object AND12_tree=null;

		try { DebugEnterRule(GrammarFileName, "expr_and");
		DebugLocation(111, 1);
		try
		{
			// C:\\Users\\Victor Manuel\\Desktop\\Projects\\GRAMMARS\\TigerGrammar.g:112:2: ( expr_rel ( AND expr_rel )* )
			DebugEnterAlt(1);
			// C:\\Users\\Victor Manuel\\Desktop\\Projects\\GRAMMARS\\TigerGrammar.g:113:3: expr_rel ( AND expr_rel )*
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(113, 3);
			PushFollow(Follow._expr_rel_in_expr_and660);
			expr_rel11=expr_rel();
			PopFollow();
			if (state.failed) return retval;
			if ( state.backtracking == 0 ) adaptor.AddChild(root_0, expr_rel11.Tree);
			DebugLocation(113, 12);
			// C:\\Users\\Victor Manuel\\Desktop\\Projects\\GRAMMARS\\TigerGrammar.g:113:12: ( AND expr_rel )*
			try { DebugEnterSubRule(3);
			while (true)
			{
				int alt3=2;
				try { DebugEnterDecision(3, decisionCanBacktrack[3]);
				int LA3_0 = input.LA(1);

				if ((LA3_0==AND))
				{
					alt3=1;
				}


				} finally { DebugExitDecision(3); }
				switch ( alt3 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\Victor Manuel\\Desktop\\Projects\\GRAMMARS\\TigerGrammar.g:113:13: AND expr_rel
					{
					DebugLocation(113, 16);
					AND12=(IToken)Match(input,AND,Follow._AND_in_expr_and663); if (state.failed) return retval;
					if ( state.backtracking == 0 ) {
					AND12_tree = (object)adaptor.Create(AND12);
					root_0 = (object)adaptor.BecomeRoot(AND12_tree, root_0);
					}
					DebugLocation(113, 18);
					PushFollow(Follow._expr_rel_in_expr_and666);
					expr_rel13=expr_rel();
					PopFollow();
					if (state.failed) return retval;
					if ( state.backtracking == 0 ) adaptor.AddChild(root_0, expr_rel13.Tree);

					}
					break;

				default:
					goto loop3;
				}
			}

			loop3:
				;

			} finally { DebugExitSubRule(3); }


			}

			retval.Stop = (IToken)input.LT(-1);

			if ( state.backtracking == 0 ) {

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("expr_and", 4);
			LeaveRule("expr_and", 4);
			Leave_expr_and();
		}
		DebugLocation(114, 1);
		} finally { DebugExitRule(GrammarFileName, "expr_and"); }
		return retval;

	}
	// $ANTLR end "expr_and"

	public class expr_rel_return : ParserRuleReturnScope<IToken>, IAstRuleReturnScope<object>
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
	}

	partial void Enter_expr_rel();
	partial void Leave_expr_rel();

	// $ANTLR start "expr_rel"
	// C:\\Users\\Victor Manuel\\Desktop\\Projects\\GRAMMARS\\TigerGrammar.g:116:1: expr_rel : expr_arit ( ( EQUALS | NOT_EQUALS | LESS | LESS_EQUALS | GREATER | GREATER_EQUALS ) expr_arit )? ;
	[GrammarRule("expr_rel")]
	private TigerGrammarParser.expr_rel_return expr_rel()
	{
		Enter_expr_rel();
		EnterRule("expr_rel", 5);
		TraceIn("expr_rel", 5);
		TigerGrammarParser.expr_rel_return retval = new TigerGrammarParser.expr_rel_return();
		retval.Start = (IToken)input.LT(1);

		object root_0 = null;

		IToken EQUALS15=null;
		IToken NOT_EQUALS16=null;
		IToken LESS17=null;
		IToken LESS_EQUALS18=null;
		IToken GREATER19=null;
		IToken GREATER_EQUALS20=null;
		TigerGrammarParser.expr_arit_return expr_arit14 = default(TigerGrammarParser.expr_arit_return);
		TigerGrammarParser.expr_arit_return expr_arit21 = default(TigerGrammarParser.expr_arit_return);

		object EQUALS15_tree=null;
		object NOT_EQUALS16_tree=null;
		object LESS17_tree=null;
		object LESS_EQUALS18_tree=null;
		object GREATER19_tree=null;
		object GREATER_EQUALS20_tree=null;

		try { DebugEnterRule(GrammarFileName, "expr_rel");
		DebugLocation(116, 1);
		try
		{
			// C:\\Users\\Victor Manuel\\Desktop\\Projects\\GRAMMARS\\TigerGrammar.g:117:2: ( expr_arit ( ( EQUALS | NOT_EQUALS | LESS | LESS_EQUALS | GREATER | GREATER_EQUALS ) expr_arit )? )
			DebugEnterAlt(1);
			// C:\\Users\\Victor Manuel\\Desktop\\Projects\\GRAMMARS\\TigerGrammar.g:118:3: expr_arit ( ( EQUALS | NOT_EQUALS | LESS | LESS_EQUALS | GREATER | GREATER_EQUALS ) expr_arit )?
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(118, 3);
			PushFollow(Follow._expr_arit_in_expr_rel682);
			expr_arit14=expr_arit();
			PopFollow();
			if (state.failed) return retval;
			if ( state.backtracking == 0 ) adaptor.AddChild(root_0, expr_arit14.Tree);
			DebugLocation(118, 13);
			// C:\\Users\\Victor Manuel\\Desktop\\Projects\\GRAMMARS\\TigerGrammar.g:118:13: ( ( EQUALS | NOT_EQUALS | LESS | LESS_EQUALS | GREATER | GREATER_EQUALS ) expr_arit )?
			int alt5=2;
			try { DebugEnterSubRule(5);
			try { DebugEnterDecision(5, decisionCanBacktrack[5]);
			int LA5_0 = input.LA(1);
